objects/DMAPP__DM_DVLS_Quicklink_User__c.object
<CustomObject>
    <description>NO CONFIGURATION SUPPORT

This object is responsible for storing user activity on individual information links assocaited with an eLearning Component</description>
    <fields>
        <fullName>DMAPP__Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_DVLS_Component_User__c</fullName>
        <label>Component User</label>
        <referenceTo>DMAPP__DM_DVLS_Component_User__c</referenceTo>
        <relationshipName>DM_DVLS_Quicklink_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_DVLS_Quicklink__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Component Quicklink</label>
        <referenceTo>DMAPP__DM_DVLS_Component_Quicklink__c</referenceTo>
        <relationshipLabel>Quicklink Users</relationshipLabel>
        <relationshipName>DM_DVLS_Quicklink_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Is_Complete__c</fullName>
        <formula>IF(DMAPP__Complete__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quicklink User</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quicklink User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quicklink Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>